Ingress/demo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: nodejs-api-service
            port:
              number: 80
      - path: /python
        pathType: Prefix
        backend:
          service:
            name: python-app-service
            port:
              number: 80
